--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,12 +16,12 @@ jobs:
       - name: Generate Directory Listings
         uses: jayanta525/github-pages-directory-listing@v3.0.0
         with:
-          FOLDER: EDIT6190e      #directory to generate index
+          FOLDER: data      #directory to generate index
 
-     # - name: Upload artifact
-      #  uses: actions/upload-pages-artifact@v1
-      #  with:
-       #   path: 'data'      # upload generated folder
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: 'data'      # upload generated folder
   
   deploy:
     needs: pages-directory-listing
