--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,17 +6,11 @@ jobs:
     runs-on: ubuntu-latest
     name: Directory Listings Index
     steps:
-      
-     # - name: Checkout Repository
-      #  uses: actions/checkout@v3
-       # with:
-        #  ref: dummy-data    #checkout different branch
-        
 
       - name: Generate Directory Listings
         uses: jayanta525/github-pages-directory-listing@v3.0.0
         with:
-          FOLDER: data      #directory to generate index
+          FOLDER: EDIT6190e      #directory to generate index
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
